# PythonProjectBaza20

./: .gitignore  README.md  conftest.py  output.txt  pyproject.toml
FEEDBACK_FORM/tests_Feedback_form_EN/: test_email_field_en.py  test_feedback_form_en.py  test_message_field_en.py  test_name_field_en.py
FEEDBACK_FORM/tests_Feedback_form_PL/: test_email_fieldff_pl.py  test_feedback_form_pl.py  test_message_field_pl.py  test_name_field_pl.py  test_name_fieldff_pl.py
FEEDBACK_FORM/tests_Feedback_form_UA/: test_email_field_ua.py  test_feedback_form_ua.py  test_message_field_ua.py  test_name_field_ua.py
MENTORS_FORM/tests_MW_Mentors_Registration_EN/: test_MW_Mentors_Registration_EN.py  test_discord_en.py  test_email_en.py  test_linkedin_en.py  test_name_en.py  test_phone_en.py  test_surname_en.py
MENTORS_FORM/tests_MW_Mentors_Registration_PL/: test_MW_Mentors_Registration_PL.py  test_discord_pl.py  test_email_pl.py  test_linkedin_pl.py  test_name_pl.py  test_phone_pl.py  test_surname_pl.py
MENTORS_FORM/tests_MW_Mentors_Registration_UA/: test_MW_Mentors_Registration_UA.py  test_discord_ua.py  test_email_ua.py  test_linkedin_ua.py  test_name_ua.py  test_phone_ua.py  test_surname_ua.py
USER_REGISTRATION/tests_MW_User_Registration_ENG/: test_MW_User_Registration_ENG.py  test_city_field.py  test_city_field_en.py  test_country_field.py  test_country_field_en.py  test_discord_field.py  test_discord_field_en.py  test_email_field.py  test_email_field_en.py  test_linkedin_field.py  test_linkedin_field_en.py  test_motivation_ffield_en.py  test_name_field.py  (+4 more)
(+83 files in other folders)
